Update index.html animation

--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
         </div>
 
         <div class="ribbon2">
-            <h2  data-aos="fade-left">Leverage AI Automation & Grow Your Business 🚀</h2>
-            <button  data-aos="fade-left"> Talk to an Expert👋</button>
+            <h2  data-aos="fade-right">Leverage AI Automation & Grow Your Business 🚀</h2>
+            <button  data-aos="fade-right"> Talk to an Expert👋</button>
         </div>
 
         <div class="b3" id="Feedback">
